# DisplayMath

./: LICENSE  README.md  setup.cfg  setup.py
DisplayMath/: __init__.py
DisplayMath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/DisplayMath_HelligeChris.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/displayMath_package/: __init__.py
