[metadata]
name = DisplayMath-HelligeChris
version = 0.0.1
author = HelligeChris
description = Display latex in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HelligeChris/DisplayMath
project_urls =
    Bug Tracker = https://github.com/HelligeChris/DisplayMath/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src